--- a/roles/lokal/templates/fail2ban/traefik-filter.conf.j2
+++ b/roles/lokal/templates/fail2ban/traefik-filter.conf.j2
@@ -1,3 +1,5 @@
+[INCLUDES]
+before = botsearch-common.conf
+
 [Definition]
-failregex = ^<HOST> \- \S+ \[\] \"(GET|POST|HEAD) .+\" 401 .+$
-ignoreregex =
+failregex = ^<HOST> \- \S+ \[\] \"(GET|POST|HEAD) \/<block> \S+\" 404 .+$
