--- a/roles/lokal/templates/fail2ban/traefik-jail.conf.j2
+++ b/roles/lokal/templates/fail2ban/traefik-jail.conf.j2
@@ -1,4 +1,22 @@
-[traefik-filter]
+[DEFAULT]
+usedns = raw
+bantime = 30m
+findtime = 10m
+
+[traefik-auth]
 enabled = true
+chain = DOCKER-USER
+port = http,https
+filter = traefik-auth
+mode = aggressive
 logpath = /var/log/traefik/access.log
-port = https
+
+[traefik-auth-ddos]
+filter = traefik-auth[mode=ddos]
+
+[traefik-botsearch]
+enabled = true
+chain = DOCKER-USER
+port = http,https
+filter = traefik-botsearch
+logpath = /var/log/traefik/access.log
